--- a/src/ViewCreator/ViewCreator.csproj
+++ b/src/ViewCreator/ViewCreator.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+    <PackageReference Include="NetPack.JsMin" Version="0.2.2" />
   </ItemGroup>
 
 </Project>
