--- a/src/ViewCreator/ViewCreator.csproj
+++ b/src/ViewCreator/ViewCreator.csproj
@@ -10,8 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-    <PackageReference Include="NetPack.JsMin" Version="0.2.2" />
   </ItemGroup>
 
 </Project>
