--- a/src/ViewCreator.React/ViewCreator.React.csproj
+++ b/src/ViewCreator.React/ViewCreator.React.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x86" Version="3.0.7" />
     <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
     <PackageReference Include="NetPack.JsMin" Version="0.2.2" />
     <PackageReference Include="React.AspNet" Version="4.1.1" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
