--- a/src/ViewCreator.React/package.json
+++ b/src/ViewCreator.React/package.json
@@ -1,12 +1,34 @@
 {
-  "name": "viewcreator",
+  "name": "ViewCreator.React",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
+    "@types/react": "16.8.13",
+    "@types/react-dom": "16.8.4",
+    "@types/redux": "^3.6.0",
+    "builtin": "0.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8",
+    "redux-thunk": "^2.3.0",
+    "typescript": "3.4.3",
+    "uuid": "^3.3.2"
   },
-  "version": "",
-  "devDependencies": {
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
